# Applied-ML-Projects

./: .gitignore  ASSESSMENT_AND_IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Chicago-Mobility-Analytics/: README.md
Chicago-Mobility-Analytics/configs/: default.yaml
Chicago-Mobility-Analytics/data/raw/: sample_trips.csv
Chicago-Mobility-Analytics/tests/: test_preprocess_integration.py  test_preprocessing.py
Gaming-Market-Intelligence/: README.md
Gaming-Market-Intelligence/configs/: config.yaml
Gaming-Market-Intelligence/data/raw/: sample_games.csv
Gaming-Market-Intelligence/tests/: test_preprocess_integration.py
GoldRecovery-Process-Optimizer/: README.md
GoldRecovery-Process-Optimizer/configs/: config.yaml
GoldRecovery-Process-Optimizer/data/raw/: sample_gold_recovery.csv
GoldRecovery-Process-Optimizer/tests/: test_preprocess_integration.py
OilWell-Location-Optimizer/: README.md
OilWell-Location-Optimizer/configs/: default.yaml
OilWell-Location-Optimizer/data/raw/: sample_geo_data_0.csv
OilWell-Location-Optimizer/tests/: test_preprocess_integration.py
common_utils/: __init__.py  seed.py
tests/: test_common_utils.py
